# xeque-mate

./: .gitignore  ALERTS_README.md  README.md  docker-compose.yml  fluxo.py  requirements.txt  test_alerts.py
chatbot_api/: pyproject.toml
chatbot_api/src/: main.py
chatbot_api/src/agents/: rag_agent.py
chatbot_api/src/chains/: cypher_chain.py  review_chain.py
chatbot_api/src/models/: rag_query.py
chatbot_api/src/utils/: websocket_manager.py
chatbot_frontend/: pyproject.toml
chatbot_frontend/src/: entrypoint.sh  main.py
coletor_data/: coletor_html_mitre.py
coletor_data/script/: coletor_autonomo.py
data/: actor_operates_ransomware.csv  ransomware.csv  ransomware_demands_payment_to_wallet.csv  ransomware_targeted_victim.csv  report_mentions_actor.csv  threat_actor.csv  victim.csv  wallet.csv
data/jsonl_processed/: TA0043.jsonl  cyberframework.jsonl  elastic_docs_index.jsonl  splunk_docs_index.jsonl
data/old/: Relatorio_Incidente_Ransomware_ACME_IR-2025-041.txt  actor_operates_ransomware.csv  ransomware_targeted_victim.csv  report_mentions_ransomware.csv  reports.csv  victim.csv
data_unstruct/: requirements.txt
embading/: embed_openai.py
extract_transform/: extract_transform.py  neo4j_ingest.py  pyproject.toml  test_ustruct.py
fluxo_data_and_unstructered/: preprocessing.py
neo4j/: ingest_neo4j.py
script/: fluxo.py  fluxo_completo.py  fluxo_uns_to_neo4j.py  fluxo_unstruc.py
unstructured/: unstructured_pipeline.py
utils/: coletor_autonomous.py  coletor_html_mitre.py  extract_transform_script.py  neo4j_loader.py  preprocessing.py
(+191 files in other folders)
